/**
 * Copyright 2024 Signal Messenger, LLC
 * SPDX-License-Identifier: AGPL-3.0-only
 */
syntax = "proto3";

package org.signal.chat.auth;

option java_package = "org.whispersystems.textsecuregcm.auth";
option java_multiple_files = true;

message DisconnectionRequest {
  bytes account_identifier = 1;
  repeated uint32 device_ids = 2;
}
